# Atlas

./: .env.evolution.example  .gitignore  docker-compose.evolution.pi.yml  docker-compose.evolution.yml  docker-compose.obsidian.yml  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: main.py  mcp_server.py
backend/app/core/: config.py  database.py  logging.py  time.py
backend/app/modules/activity_ledger/: router.py  service.py
backend/app/modules/audit/: router.py
backend/app/modules/coach/: context.py  service.py
backend/app/modules/communication/: classifier.py  commands.py  evolution.py  intent.py  nudges.py  outbox.py  router.py  scheduler.py
backend/app/modules/dashboard/: router.py  service.py
backend/app/modules/disciplines/: router.py
backend/app/modules/hobby/: router.py
backend/app/shared/: audit.py  schemas.py  sql.py
backend/scripts/: normalize_timestamps.py  send_daily_brief.py  verify_mcp_ready.py
backend/tests/: conftest.py  test_coach_context.py  test_coach_service.py  test_core_flow.py  test_forward_brief.py  test_hobby_ideas.py  test_intent.py  test_life_modules_delete.py  test_life_modules_service.py  test_mcp_message_owner.py  test_mcp_proposals.py  test_mcp_reads.py  test_mcp_safety.py  test_nudges.py  test_obsidian_export.py  test_outbox.py  test_plan_activation.py  test_plan_decomposition.py  test_planning_api.py  test_planning_backlog.py  test_planning_drift.py  test_planning_goal_crud.py  test_planning_replan.py  test_planning_service.py  test_planning_step_links.py  test_proposals_api.py  test_proposals_service.py  test_whatsapp.py  test_whatsapp_commands.py  test_whatsapp_hub.py
(+82 files in other folders)
