[project]
name = "atlas-backend"
version = "0.1.0"
description = "Atlas personal Life OS backend"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "httpx2>=0.28.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.6.0",
  "uvicorn[standard]>=0.32.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
