[project]
name = "atlas-backend"
version = "0.1.0"
description = "Atlas personal Life OS backend"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.6.0",
  "uvicorn[standard]>=0.32.0"
]

[project.optional-dependencies]
mcp = ["mcp>=1.2.0"]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
  # Starlette's TestClient HTTP client. Test-only — runtime uses stdlib urllib.
  # (Starlette now recommends httpx2 over httpx for the TestClient.)
  "httpx2>=0.28.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
# Pragmatic starting set: pyflakes(F), pycodestyle(E/W), isort(I),
# pyupgrade(UP), flake8-bugbear(B). Expand over time.
select = ["E", "W", "F", "I", "UP", "B"]
ignore = [
  "B008",  # FastAPI uses function calls (Depends/Query) in argument defaults
  "E501",  # line length is a formatter concern, not a lint gate (avoid churn now)
]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
# Lenient to start — tighten module-by-module as the service layer lands.
check_untyped_defs = true
warn_unused_ignores = true
